--- a/Тестовое задание/Тестовое задание/Тестовое задание.csproj
+++ b/Тестовое задание/Тестовое задание/Тестовое задание.csproj
@@ -151,8 +151,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\PagingHelpers.cs" />
     <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Models\ReportingPeriodViewModel.cs" />
+    <Compile Include="Models\ReportPageViewModel.cs" />
     <Compile Include="NorthwindModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
